# launchdock

./: .gitignore  Cargo.toml  INSTALL  INSTALL-MACOS.md  Info.plist  LICENSE  README.md  launch.sh  tech.qa3.launchdock.plist
.github/workflows/: ci.yaml
.zed/: debug.json  tasks.json
src/: apps.rs  daemon.rs  ipc.rs  logs.rs  main.rs  model.rs  ui.rs  view.rs
