[package]
name = "launchdock"
version = "0.0.0"
edition = "2024"
description = "Cross-platform application launcher daemon"
authors = ["QA3 Technologies <contact@qa3.tech>"]

[dependencies]
iced = { version = "0.13.1", features = ["advanced", "image", "svg"] }
dirs = "5.0"
chrono = "0.4"
rs-apply = { git = "https://github.com/qa3-tech/rs-apply" }

image = "0.25"
rand = "0.8"
rand_chacha = "0.3"
icns = "0.3.1"

resvg = "0.45"
usvg = "0.45"  
tiny-skia = "0.11"


# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows = { version = "0.62", features = ["Win32_UI_Shell", "Win32_Foundation"] }

[target.'cfg(target_os = "macos")'.dependencies]
icns = "0.3"
plist = "1.5"

[target.'cfg(target_os = "linux")'.dependencies]
freedesktop-desktop-entry = "0.5"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
